- added ability to jump to page from pagination bar by clicking on the ellipses  - fixed results listing alignment for images that are less than 150px wide  - breadcrumb divider colors changed to for visibility  - title for home page browsing added  - CSS tweak for pagination

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1,19 +1,19 @@
-
 @import "artsale";
 @import "bootstrap";
 
 .admin {
- h2 { font-size: 26px;
-      font-family: Candara, sans-serif;
-      color: #727272;
-  }
+    h2 {
+        font-size: 26px;
+        font-family:Candara, sans-serif;
+        color:#727272;
+    }
 
   .body {
 	  font-family: Candara, sans-serif;
   }
 
   .menu {
-	  font-family: Verdana, Geneva, sans-serif;
+    .body { font-family:Candara, sans-serif; }
 	  padding: 10px;
 	  margin: 0px;	
 	  font-size: 20px;
@@ -137,7 +137,10 @@
 .breadcrumb {
 	a { color: #ccc; }
 	a:visited { color: #ccc; }
-	color: #ccc;
     overflow: auto;
 	margin-bottom: 0;
+}
+
+.divide {
+    color: #dddddd;
 }
